@@ -56,5 +56,7 @@ Revision history for SWISH-Prog-KSx
 0.14    xxx
     * fix bug where Doc values were not being flagged as UTF-8 in
       Indexer.
+    * fix bug where built-in PropertyNames were not being allowed
+      to be both MetaNames and PropertyNames
 
 
